--- a/package.json
+++ b/package.json
@@ -57,12 +57,12 @@
     "framer-motion-3d": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^14.2.28",
     "next-themes": "latest",
     "postprocessing": "latest",
-    "react": "^19",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-native": "latest",
     "react-resizable-panels": "^2.1.7",
