--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-spring/three": "latest",
-    "@react-three/drei": "latest",
-    "@react-three/fiber": "latest",
+    "@react-three/drei": "^9.92.4",
+    "@react-three/fiber": "^8.13.3",
     "@react-three/postprocessing": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
